# oscbf

./: .gitignore  .gitmodules  LICENSE  README.md  pybullet.pyi  pyproject.toml
oscbf/assets/: point_robot.urdf
oscbf/assets/franka_panda/: README.md  panda.urdf
oscbf/core/: controllers.py  franka_collision_model.py  manipulation_env.py  manipulator.py  oscbf_configs.py  oscbf_torque.py  oscbf_torque_config.py  oscbf_velocity.py  oscbf_velocity_config.py
oscbf/examples/: cluttered_tabletop.py  combined_experiment.py  dynamic_motion.py  multiple_safety_conditions.py  scaling_collisions.py
oscbf/scripts/: validate_urdf_parsing.py  visualize_franka_collision_model.py
oscbf/utils/: controllers.py  general_utils.py  genesis_urdf.py  trajectory.py  visualization.py
oscbf/utils/urdfpy/: urdf.py  utils.py
test/: test_manipulator_dynamics.py
